--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           # 1. 下载文件（使用通配符忽略大小写）
           echo "正在从标签 'kernel' 下载文件..."
-          gh release download kernel --repo ${{ github.repository }} --pattern 'image*' --clobber
+          gh release download kernel --repo ${{ github.repository }} --pattern 'Image*' --clobber
           gh release download kernel --repo ${{ github.repository }} --pattern 'boot.img' --clobber
           
           # 2. 自动纠正大小写：将任何形式的 image 统一重命名为大写 Image
